<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_allmusic"
            android:title="@string/drawer_all_title"/>
        <item
            android:id="@+id/navigation_favorites"
            android:icon="@drawable/menu_favorites"
            android:title="@string/drawer_favorites_title"/>
        <item
            android:id="@+id/navigation_stations"
            android:icon="@drawable/menu_stations"
            android:title="@string/drawer_radio_stations_title"/>
        <item
            android:id="@+id/navigation_fairy_tales"
            android:icon="@drawable/menu_fairy_tales"
            android:title="@string/drawer_fairy_tales_title"/>
        <item
            android:id="@+id/navigation_auditions"
            android:icon="@drawable/menu_auditions"
            android:title="@string/drawer_auditions_title"/>
        <item
            android:id="@+id/navigation_songs"
            android:icon="@drawable/menu_songs"
            android:title="@string/drawer_songs_title"/>
        <item
            android:id="@+id/navigation_cartoons"
            android:icon="@drawable/menu_cartoons"
            android:title="@string/drawer_cartoons_title"/>
        <item
            android:id="@+id/navigation_nanny"
            android:icon="@drawable/menu_nanny"
            android:title="@string/drawer_nanny_title"/>
    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single" >
        <item
            android:id="@+id/navigation_select_theme"
            android:checked="false"
            android:title="@string/drawer_select_theme_title"
            />
        <item
            android:id="@+id/navigation_select_languages"
            android:checked="false"
            android:title="@string/drawer_select_languages_title"
            />
    </group>

</menu>
