<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/playback_controls_padding">

    <ImageButton
        android:id="@+id/play_pause"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/play_pause"
        android:padding="8dp"
        android:src="@drawable/ic_play_arrow_black_36dp"
        android:tint="@android:color/white"
        android:visibility="visible"
        android:layout_marginStart="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp" />

    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@+id/play_pause"
        android:layout_marginLeft="4dp"
        app:layout_constraintRight_toLeftOf="@+id/imageViewSetFavorite"
        android:layout_marginRight="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp">

        <TextView
            android:id="@+id/titleStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/currently_playing_song"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="The Best Music EVAH1111 THE BEST" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleStation"
            android:contentDescription="@string/currently_playing_song"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="The Best Music EVAH1111 THE BEST" />

        <TextView
            android:id="@+id/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title"
            android:contentDescription="@string/currently_playing_artist"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary"
            tools:text="John Doe and Band" />

        <TextView
            android:id="@+id/extra_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/artist"
            android:contentDescription="@string/currently_playing_extra_info"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"
            tools:text="casting to MyCast" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageViewSetFavorite"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:padding="8dp"
        android:visibility="visible"
        app:srcCompat="@drawable/like_1"
        app:layout_constraintRight_toLeftOf="@+id/imageViewMenuRecords"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/empty_text"
        />

    <ImageButton
        android:id="@+id/imageViewMenuRecords"
        android:layout_width="24dp"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/ic_three_dot_vector"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/empty_text"/>
</android.support.constraint.ConstraintLayout>
